--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": "^8.1",
         "alymosul/laravel-exponent-push-notifications": "^4.0",
+        "cloudinary-labs/cloudinary-laravel": "^2.0",
         "ezyang/htmlpurifier": "^4.17",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
