--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "mews/purifier": "^3.4",
+        "spatie/laravel-responsecache": "^7.4",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
