--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.22",
         "mews/purifier": "^3.4",
         "spatie/laravel-responsecache": "^7.4",
         "tymon/jwt-auth": "^2.0"
