--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "league/flysystem-aws-s3-v3": "^3.22",
         "mews/purifier": "^3.4",
         "spatie/laravel-responsecache": "^7.4",
-        "tymon/jwt-auth": "^2.0"
+        "tymon/jwt-auth": "^2.0",
+        "yieldstudio/laravel-expo-notifier": "^0.0.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
